Section description - fix empty yet visible problem

--- a/public/files/css/widgets.less
+++ b/public/files/css/widgets.less
@@ -980,17 +980,6 @@ table.MLSingleLevelFields {
     background-color: #ffb4b4;
 }
 
-.TextTypesNotes {
-
-    div {
-        text-align: justify;
-    }
-
-    p {
-        margin: 0.4em 1em;
-    }
-}
-
 .PersistentConcordanceForm {
 
     input {
